@@ -152,7 +152,7 @@ public class HTMLEntityCodec extends Codec {
 	 * @throws NumberFormatException
 	 */
 	private Character parseNumber( PushbackString input ) {
-		StringBuilder sb = new StringBuilder();
+		StringBuffer sb = new StringBuffer();
 		while( input.hasNext() ) {
 			Character c = input.peek();
 			
@@ -175,7 +175,7 @@ public class HTMLEntityCodec extends Codec {
 			int i = Integer.parseInt(sb.toString());
 			// TODO: in Java 1.5 you can test whether this is a valid code point
 			// with Character.isValidCodePoint() et al.
-			return Character.valueOf( (char)i );
+			return new Character( (char)i );
 		} catch( NumberFormatException e ) {
 			// throw an exception for malformed entity?
 			return null;
@@ -192,7 +192,7 @@ public class HTMLEntityCodec extends Codec {
 	 * @throws NumberFormatException
 	 */
 	private Character parseHex( PushbackString input ) {
-		StringBuilder sb = new StringBuilder();
+		StringBuffer sb = new StringBuffer();
 		while( input.hasNext() ) {
 			Character c = input.peek();
 			
@@ -215,7 +215,7 @@ public class HTMLEntityCodec extends Codec {
 			int i = Integer.parseInt(sb.toString(), 16);
 			// TODO: in Java 1.5 you can test whether this is a valid code point
 			// with Character.isValidCodePoint() et al.
-			return Character.valueOf( (char)i );
+			return new Character( (char)i );
 		} catch( NumberFormatException e ) {
 			// throw an exception for malformed entity?
 			return null;
@@ -242,7 +242,7 @@ public class HTMLEntityCodec extends Codec {
 	 */
 	private Character getNamedEntity( PushbackString input ) {
 		// search through the rest of the string up to 6 characters
-		StringBuilder possible = new StringBuilder();
+		StringBuffer possible = new StringBuffer();
 		int len = Math.min( input.remainder().length(), 7 );
 		for ( int i=0; i<len; i++ ) {
 			possible.append( Character.toLowerCase(input.next().charValue()) );
@@ -773,7 +773,7 @@ public class HTMLEntityCodec extends Codec {
 		entityToCharacterMap = new HashMap(entityValues.length);
 		for (int i = 0; i < entityNames.length; i++) {
 			String e = entityNames[i];
-			Character c = Character.valueOf(entityValues[i]);
+			Character c = new Character(entityValues[i]);
 			entityToCharacterMap.put(e, c);
 			characterToEntityMap.put(c, e);
 		}
